<resources>
    <string name="app_name">ExMusic</string>
    <string name="deleteItem">%d لیست انتخاب شده است</string>
    <string name="deleteSong">%d موزیک انتخاب شده است</string>
    <string name="allMusics">همه موزیک ها</string>
    <string name="playList">لیست پخش</string>
    <string name="favoriteList">لیست مورد علاقه ها</string>
    <string name="artists">خواننده ها</string>
    <string name="albums">آلبوم ها</string>
    <string name="folders">پوشه ها</string>
    <string name="settings">تنظیمات</string>
    <string name="version">ورژن %s</string>
    <string name="chooseTheme">انتخاب پوسته</string>
    <string name="confirm">تایید</string>
    <string name="dark">تیره</string>
    <string name="light">روشن</string>
    <string name="addToPlayList">افزودن به لیست پخش</string>
    <string name="addPlayList">افزودن لیست پخش</string>
    <string name="playListName">نام لیست پخش</string>
    <string name="add">افزودن</string>
    <string name="thereIsNothingHere">اینجا چیزی نیست</string>
    <string name="chooseMusic">انتخاب موزیک</string>
    <string name="favorites">مورد علاقه ها</string>
    <string name="search">جستوجو</string>
    <string name="nothingFound">چیزی یافت نشد</string>
    <string name="audioQuality">کیفیت صدا</string>
    <string name="audioSettings">تنظیمات صدا</string>
    <string name="audioSettingDesc">افزایش لذت از موزیک بوسیله شخصی سازی تنظیمات صدا</string>
    <string name="general">عمومی</string>
    <string name="language">زبان</string>
    <string name="persian">فارسی</string>
    <string name="customize">شخصی سازی</string>
    <string name="theme">پوسته</string>
    <string name="themeSettingsDes">انتخاب یک پوسته برای رابط کاربری برنامه</string>
    <string name="aboutUs">درباره ما</string>
    <string name="sourceLisence">سورس لایسنس</string>
    <string name="isPlaying">در حال پخش</string>
    <string name="share">اشتراک گذاری</string>
    <string name="all">همه</string>
    <string name="permissionDenied">عدم دسترسی به فایل ها</string>
    <string name="sendVia">ارسال با ...</string>
    <string name="addNewPlayList">افزودن لیست پخش جدید</string>
    <string name="alredyAdded">قبلا اضافه شده است</string>
    <string name="added">اضافه شد</string>
    <string name="chooseLanguage">انتخاب زبان</string>
    <string name="english">English</string>
    <string name="done">انجام شد</string>
    <string name="delete">حذف</string>
    <string name="nothingToDelete">چیزی برای حذف وجود ندارد</string>
    <string name="insertListName">لطفا نام لیست را وارد کنید</string>
    <string name="existList">این لیست وجود دارد</string>
    <string name="characterError">نام لیست باید بین دو تا پانزده کارکتر باشد</string>
    <string name="newest">جدیدترین ها</string>
    <string name="name">نام</string>
    <string name="freshes">تازه ها</string>
    <string name="details">جزییات</string>
    <string name="path">مسیر :</string>
    <string name="size">حجم :</string>
    <string name="megaByteSize">%s مگابایت</string>
    <string name="kiloByteSize">%s کیلوبایت</string>
    <string name="openVia">باز کردن لینک با …</string>
    <string name="lastModification">آخرین تغییر :</string>
</resources>