<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:orientation="vertical"
    android:background="?colorOnPrimary"
    android:layout_height="wrap_content">

    <com.dust.exmusic.customviews.CTextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="?android:textColor"
        android:padding="@dimen/standardMargin"
        android:textSize="18dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPath"
            android:layout_width="0dp"
            android:layout_weight="80"
            android:layout_marginStart="@dimen/standardMargin"
            android:layout_height="wrap_content" />

        <com.dust.exmusic.customviews.CTextView
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_marginHorizontal="@dimen/standardMargin"
            android:layout_height="wrap_content"
            android:text="@string/path"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSize"
            android:layout_width="0dp"
            android:layout_weight="80"
            android:layout_marginStart="@dimen/standardMargin"
            android:layout_height="wrap_content" />

        <com.dust.exmusic.customviews.CTextView
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_marginHorizontal="@dimen/standardMargin"
            android:layout_height="wrap_content"
            android:text="@string/size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        android:layout_marginBottom="@dimen/standardMargin2x"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:layout_marginStart="@dimen/standardMargin"
            android:layout_height="wrap_content" />

        <com.dust.exmusic.customviews.CTextView
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_marginHorizontal="@dimen/standardMargin"
            android:layout_height="wrap_content"
            android:text="@string/lastModification"/>

    </LinearLayout>

</LinearLayout>