<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.dust.exmusic.customviews.CTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addPlayList"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="?android:textColor"
        android:padding="@dimen/standardMargin"
        android:textSize="18dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/standardMargin"
        app:errorEnabled="true"
        android:layoutDirection="rtl"
        app:boxBackgroundColor="@color/blue"
        android:padding="@dimen/standardMargin0.5x"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:textColorHint="@color/light_black"
        app:hintTextColor="@color/blue"
        app:errorTextColor="@color/red">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:backgroundTint="@color/blue"
            android:textColor="?android:textColor"
            android:textDirection="rtl"
            android:hint="@string/playListName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/standardMargin0.5x"
        android:orientation="horizontal">

        <com.dust.exmusic.customviews.CButton
            android:id="@+id/add_button"
            android:layout_width="150dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:layout_marginVertical="@dimen/standardMargin"
            android:background="@drawable/confirm_button_selector"
            android:layout_marginHorizontal="@dimen/standardMargin0.5x"
            android:layout_height="40dp"/>

    </LinearLayout>

</LinearLayout>